# RXMesh

./: CMakeLists.txt  flake.nix
apps/: CMakeLists.txt
apps/introduction/: CMakeLists.txt  introduction.cu
